# OpenGLSandBox

./: .gitignore  CMakeLists.txt  README.md  vcpkg1.json
OpenGL-Core/: CMakeLists.txt
OpenGL-Core/assets/shaders/: Renderer2D_Circle.glsl  Renderer2D_Light.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl
OpenGL-Core/src/: GLCore.h  GLCoreUtils.h
OpenGL-Core/src/GLCore/Core/: Application.cpp  Application.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  Log.cpp  Log.h  MouseCodes.h  MyAssert.h  Timer.h  Window.h
OpenGL-Core/src/GLCore/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
OpenGL-Core/src/GLCore/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
OpenGL-Core/src/GLCore/Renderer/: Buffer.cpp  Buffer.h  Geometry.h  Light.h  OpenGLTexture.cpp  OpenGLTexture.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
OpenGL-Core/src/GLCore/Util/: CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  OpenGLDebug.cpp  OpenGLDebug.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  ProjectionCamera.cpp  ProjectionCamera.h
OpenGL-Core/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
OpenGL-Examples/: CMakeLists.txt
OpenGL-Examples/assets/shaders/: Renderer2D_Circle.glsl  Renderer2D_Line.glsl
OpenGL-Examples/src/: ExampleApp.cpp  ExampleLayer.cpp  ExampleLayer.h  Renderer.cpp  Renderer.h
shaders/: test.frag.glsl  test.vert.glsl
